changed "section p" selector to .text p selector to avoid changing paragraph widths on stretch.html

--- a/great-idea-website/css/stretch.css
+++ b/great-idea-website/css/stretch.css
@@ -239,7 +239,7 @@ div.text {
   vertical-align: top;
 }
 
-section p {
+.text p {
   width: 350px;
 }
 
